# pattern

./: .gitignore  README.md
factory/base/: CMakeLists.txt
factory/base/src/: CMakeLists.txt  Layer.cpp  Layer.hpp  LayerFactory.cpp  LayerFactory.hpp  layer_declaration.hpp
factory/base/src/layer/: convolution.cpp  convolution.hpp  eltwise.cpp  eltwise.hpp  pooling.cpp  pooling.hpp
factory/base/test/: CMakeLists.txt  test_fac.cpp  test_reg.cpp
factory/dlopen/: CMakeLists.txt
factory/dlopen/src/: CMakeLists.txt  runner.cpp  runner.hpp
factory/dlopen/src/cpu/: CMakeLists.txt  cpu_runner.cpp  cpu_runner.hpp
factory/dlopen/src/sim/: CMakeLists.txt  sim_runner.cpp  sim_runner.hpp
factory/dlopen/src/xpu/: CMakeLists.txt  xpu_runner.cpp  xpu_runner.hpp
factory/dlopen/test/: CMakeLists.txt  test_cpu.cpp  test_sim.cpp  test_xpu.cpp
factory/wholeArchive/: CMakeLists.txt
factory/wholeArchive/src/: CMakeLists.txt  Layer.cpp  Layer.hpp  LayerFactory.hpp
factory/wholeArchive/src/layer/: convolution.cpp  convolution.hpp  eltwise.cpp  (+3 more)
factory/wholeArchive/test/: CMakeLists.txt  test_fac.cpp
graph/: CMakeLists.txt
graph/src/: CMakeLists.txt  algorithm.hpp  attribute.hpp  common.hpp  graph.hpp  stringgraph.cpp  stringgraph.hpp
graph/test/: CMakeLists.txt  testAttr.cpp  testGraph.cpp
interface/builder/: CMakeLists.txt
interface/builder/src/: CMakeLists.txt  Layer.cpp  Layer.hpp  LayerFactory.hpp  LayerInterface.hpp
interface/builder/test/: CMakeLists.txt  test_proxy.cpp
interface/imp/: CMakeLists.txt  cmake.sh
interface/imp/src/: CMakeLists.txt  Tensor.cpp  Tensor.hpp  TensorImp.cpp  TensorImp.hpp  common.hpp
interface/imp/test/: CMakeLists.txt  test_tensor.cpp
process/: CMakeLists.txt
process/src/: CMakeLists.txt  ITProcessor.cpp  ITProcessor.hpp  Processor.cpp  Processor.hpp  common.hpp
process/test/: CMakeLists.txt  testproc.cpp
