CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(factory_base VERSION 1.0.0 LANGUAGES C CXX)

# compiler related
SET(CMAKE_C_COMPILER "gcc")
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}  -g -ggdb -Wall -std=c++11")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -Wall -std=c++11")

#path related
SET(SRC_PATH ${CMAKE_SOURCE_DIR}/src)
SET(TEST_PATH ${CMAKE_SOURCE_DIR}/test)
SET(LIB_PATH ${CMAKE_SOURCE_DIR}/lib)


# include directories, headers and libs
INCLUDE_DIRECTORIES(${SRC_PATH})
INCLUDE_DIRECTORIES(${SRC_PATH}/layer)
LINK_DIRECTORIES(${LIB_PATH})

# build all targets
ADD_SUBDIRECTORY(${SRC_PATH})
ADD_SUBDIRECTORY(${TEST_PATH})
