SET(RUN_BASE_LIB run_base)

SET(CPU_SRC_PATH ${CMAKE_SOURCE_DIR}/src/cpu)
SET(SIM_SRC_PATH ${CMAKE_SOURCE_DIR}/src/sim)
SET(XPU_SRC_PATH ${CMAKE_SOURCE_DIR}/src/xpu)


AUX_SOURCE_DIRECTORY(. RUN_BASE_SRC)

SET(LIBRARY_OUTPUT_PATH ${LIB_PATH})
ADD_LIBRARY(${RUN_BASE_LIB} SHARED ${RUN_BASE_SRC})
TARGET_LINK_LIBRARIES(${RUN_BASE_LIB} dl)

ADD_SUBDIRECTORY(${CPU_SRC_PATH})
ADD_SUBDIRECTORY(${SIM_SRC_PATH})
ADD_SUBDIRECTORY(${XPU_SRC_PATH})
